2006/06/24	kaffeetisch

	* t/GtkTextBuffer.t: Test the copy-target-list and
	paste-target-list properties.

	* gtk2perl.h, xs/GtkSelection.xs: Fix the GtkTargetList wrappers
	again to be fully backwards-compatible *and* use the boxed type if
	available.  This involves using a custom wrap function that always
	assumes ownership of the boxed object, just like the old wrapper
	does.  Code that uses the GtkTargetList typemaps should continue
	to work without changes.

2006/06/20	kaffeetisch

	* MANIFEST, maps-2.10, xs_files-2.10, t/GtkPageSetup.t,
	t/GtkPaperSize.t, t/GtkPrintContext.t, t/GtkPrintOperation.t,
	t/GtkPrintOperationPreview.t, t/GtkPrintSettings.t,
	xs/GtkPageSetup.xs, xs/GtkPaperSize.xs, xs/GtkPrintContext.xs,
	xs/GtkPrintOperation.xs, xs/GtkPrintOperationPreview.xs,
	xs/GtkPrintSettings.xs: Add support for the new printing API:
	GtkPageSetup, GtkPaperSize, GtkPrintContext, GtkPrintOperation,
	GtkPrintOperationPreview, GtkPrintSettings.

2006/06/19	kaffeetisch

	* Makefile.PL, xs_files-2.8: If gtk+ 2.8 or newer is used,
	require (the Perl module) Cairo 0.04.

2006/06/18	kaffeetisch

	* t/GtkTreeModelFilter.t, xs/GtkTreeModelFilter.xs:
	gtk_tree_model_filter_convert_child_iter_to_iter now has a bool
	return value, and gtk_tree_model_filter_convert_child_path_to_path
	and gtk_tree_model_filter_convert_path_to_child_path can now
	return NULL.  Alter the wrappers accordingly.

	* t/PangoCairo.t, xs/PangoCairo.xs: Bind and test
	pango_cairo_show_error_underline,
	pango_cairo_error_underline_path.

	* t/PangoFont.t, xs/PangoFont.xs: Bind and test
	pango_font_describe_with_absolute_size.  Also plug some leaks.

2006/06/16	kaffeetisch

	* t/GtkNotebook.t, xs/GtkNotebook.xs: Use an API improvement in
	gtk+ 2.9.2.

	* map-2.10, t/GtkTreeView.t, xs/GtkTreeView.xs: Bind and test
	gtk_tree_view_set_rubber_banding,
	gtk_tree_view_get_rubber_banding, gtk_tree_view_get_grid_lines,
	gtk_tree_view_set_grid_lines, gtk_tree_view_get_enable_tree_lines,