@@ -1,3 +1,8 @@
+2006/06/25	kaffeetisch
+
+	* t/GtkLabel.t, xs/GtkLabel.xs: Bind and test
+	gtk_label_set_line_wrap_mode and gtk_label_get_line_wrap_mode.
+
 2006/06/24	kaffeetisch
 
 	* t/GtkTextBuffer.t: Test the copy-target-list and
